Changelog
=========

1.0b21 - Unreleased
-------------------


1.0b20 - Released January 26, 2010
----------------------------------

* Fix reindexing to always provide data for all fields defined in the schema
  as support for "updateable/modifiable documents" is only planned for Solr
  1.5.  See https://issues.apache.org/jira/browse/SOLR-139 for more info.
  [witsch]

* Fix CSS issues regarding facet display on IE6.
  [witsch]


1.0b19 - Released January 24, 2010
----------------------------------

* Fix partial reindexing to preserve data for indices that are not stored.
  [witsch]

* Help with improved logging of auto-flushes for easier performance tuning.
  [witsch]


1.0b18 - Released January 23, 2010
----------------------------------

* Work around layout issue regarding facet counts on IE6.
  [witsch]


1.0b17 - Released January 21, 2010
----------------------------------

* Don't confuse pre-configured filter queries with facet selections.
  [witsch]

* Always display selected facets, even, or especially, without search results.
  [witsch]


1.0b16 - Released January 11, 2010
----------------------------------

* Remove `catalogSync` maintenance view since it would need to fetch
  additional data (for non-stored indices) from the objects themselves in
  order to work correctly.
  [witsch]

* Fix `reindex` maintenance view to preserve data that cannot be fetched from
  Solr during partial indexing, i.e. indices that are not stored.
  [witsch]

* Use wildcard searches for simple search terms to reflect Plone's default
  behaviour.
  [witsch]

* Fix drill-down for facet values containing white space.
  [witsch]

* Add support for partial syncing of catalog and solr indexes.
  [witsch]


1.0b15 - Released October 12, 2009
----------------------------------

* Filter control characters from all input to prevent indexing errors.
  This refs http://plone.org/products/collective.solr/issues/1
  [witsch]


1.0b14 - Released September 17, 2009